--- a/component/zoomImgByView/zoomImgByView.wxml
+++ b/component/zoomImgByView/zoomImgByView.wxml
@@ -10,13 +10,12 @@
       catchtouchmove='_touchMoveEvent'
       catchtouchend='_touchEndEvent'
       catchtouchcancel='_touchEndEvent'/>
-    <button class="button" style="position:absolute;width:{{butWidth}}px;height:{{butHeight}}px;margin-top:{{butMarginTop}}px;margin-left:{{butMarginLeft}}px">Test</button>
-    
+
     <view wx:for='{{room_seats_map}}' wx:key='item.seat_id'>
-    <button wx:if="{{item.statu==1}}" class='seatsTaken' data-id='{{item.seat_id}}' style='width:{{butWidth}}px;height:{{butHeight}}px;margin-top:{{item.loca_y * imgHeight + marginTop}}px;margin-left:{{item.loca_x * imgWidth + marginLeft}}px'>{{item.seat_id}}</button>
+    <button wx:if="{{item.state==1}}" class='seatReserve' data-id='{{item.seat_id}}' style='width:{{butWidth}}px;height:{{butHeight}}px;margin-top:{{item.loca_y * imgHeight + marginTop}}px;margin-left:{{item.loca_x * imgWidth + marginLeft}}px'>{{item.seat_id}}</button>
     <button wx:elif="{{item.checked}}" class='seatChecked' data-id='{{item.seat_id}}' style='width:{{butWidth}}px;height:{{butHeight}}px;margin-top:{{item.loca_y * imgHeight + marginTop}}px;margin-left:{{item.loca_x * imgWidth + marginLeft}}px'>{{item.seat_id}}</button>
-    <button wx:elif="{{item.statu==2}}" class='seatReserve' hover-class='none' data-id='{{item.seat_id}}' style='width:{{butWidth}}px;height:{{butHeight}}px;margin-top:{{item.loca_y * imgHeight + marginTop}}px;margin-left:{{item.loca_x * imgWidth + marginLeft}}px'>{{item.seat_id}}</button>
-    <button wx:elif="{{item.statu==3}}" class='seatOperating' hover-class='none' data-id='{{item.seat_id}}' style='width:{{butWidth}}px;height:{{butHeight}}px;margin-top:{{item.loca_y * imgHeight + marginTop}}px;margin-left:{{item.loca_x * imgWidth + marginLeft}}px'>{{item.seat_id}}</button>
+    <button wx:elif="{{item.state==2}}" class='seatsTaken' hover-class='none' data-id='{{item.seat_id}}' style='width:{{butWidth}}px;height:{{butHeight}}px;margin-top:{{item.loca_y * imgHeight + marginTop}}px;margin-left:{{item.loca_x * imgWidth + marginLeft}}px'>{{item.seat_id}}</button>
+    <button wx:elif="{{item.state==3}}" class='seatOperating' hover-class='none' data-id='{{item.seat_id}}' style='width:{{butWidth}}px;height:{{butHeight}}px;margin-top:{{item.loca_y * imgHeight + marginTop}}px;margin-left:{{item.loca_x * imgWidth + marginLeft}}px'>{{item.seat_id}}</button>
     <button wx:else class='seatsEmpty' bindtap='_checkThis' data-id='{{item.seat_id}}' style='width:{{butWidth}}px;height:{{butHeight}}px;margin-top:{{item.loca_y * imgHeight + marginTop}}px;margin-left:{{item.loca_x * imgWidth + marginLeft}}px'>{{item.seat_id}}</button>
   </view>
 </view>
