--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,17 +1,57 @@
 <!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
+<!-- 轮播图 -->
+<swiper indicator-dots="true" autoplay="ture" interval="5000" duration="1000" indicator-active-color="#0068CC" indicator-color="rgba(255, 255, 255, .3)">
+  <block wx:for="{{imgUrls}}">
+    <swiper-item>
+      <image src="{{item}}" class="slide-image"/>
+    </swiper-item>
+  </block>
+</swiper>
 
-  <view class="usermotto">
-  </view>
-
-  <button type="default" size="default" bindtap='gotoLibrary'> 开始选座</button>
-  <button type="default" size="default" bindtap='quickSelect'> 快速选座</button>
-
+<!-- 标题栏 -->
+<view class="borderl bordern">
+<view class="word">Study Areas Details</view>
 </view>
+
+<!-- 楼层表单 -->
+<!-- <view wx:for="{{[1,2,3,4,5]}}" wx:for-index="i" wx:for-item="item"> -->
+<view class="borderb">
+  <view class="hor forcast" bindtap='Toroom'>
+    <view class="b center">4th</view>
+    <view class="center">Floor</view>
+    <view class="red center">26 Free, 23°C</view>
+    <view class="red center">9%</view>
+    <image class="arrows" src="../../assets/icons/arrows1.png"></image>
+  </view>
+</view>
+
+<view class="borderb">
+  <view class="hor forcast bc">
+    <view class="b center">3th</view>
+    <view class="center">Floor</view>
+    <view class="red center">0 Free, 0°C</view>
+    <view class="red center">0%</view>
+    <image class="arrows" src="../../assets/icons/arrows1.png"></image>
+  </view>
+</view>
+<view class="borderb">
+  <view class="hor forcast bc">
+    <view class="b center">2th</view>
+    <view class="center">Floor</view>
+    <view class="red center">0 Free, 0°C</view>
+    <view class="red center">0%</view>
+    <image class="arrows" src="../../assets/icons/arrows1.png"></image>
+  </view>
+</view>
+
+<view class="borderb">
+  <view class="hor forcast bc">
+    <view class="b center">1th</view>
+    <view class="center">Floor</view>
+    <view class="red center">0 Free, 0°C</view>
+    <view class="red center">0%</view>
+    <image class="arrows" src="../../assets/icons/arrows1.png"></image>
+  </view>
+</view>
+
+<!-- </view> -->
