--- a/component/popup/popup.wxml
+++ b/component/popup/popup.wxml
@@ -3,9 +3,9 @@
   <view class='popup-container'>
     <view class="wx-popup-title">{{title}}</view>
     <view class="wx-popup-con">{{content}}</view>
-    <view class="wx-popup-btn">
-      <text class="btn-no" bindtap='_error'>{{btn_no}}</text>
-      <text class="btn-ok" bindtap='_success'>{{btn_ok}}</text>
+    <view class="wx-popup-btn">     
+      <button bindtap='_error'>{{btn_no}}</button>
+      <button bindtap='_success'>{{btn_ok}}</button>
     </view>
   </view>
 </view>
