--- a/component/popup/popup.wxss
+++ b/component/popup/popup.wxss
@@ -37,7 +37,7 @@
   justify-content: space-around;
   margin-bottom: 40rpx;
 }
-.wx-popup-btn text {
+.wx-popup-btn button {
   display: flex;
   align-items: center;
   justify-content: center;
