--- a/component/zoomImgByView/zoomImgByView.wxml
+++ b/component/zoomImgByView/zoomImgByView.wxml
@@ -5,10 +5,10 @@
     style="height:{{view_height}}px; width:{{view_width}}px; top:{{-view_height/2}}px; left:{{-view_width/2}}px; background: red;"
     scale-area
   >
+    <!-- bindchange="onChange"
+      bindscale="onScale" -->
     <movable-view
       direction="all"
-      bindchange="onChange"
-      bindscale="onScale"
       scale
       scale-min="0.5"
       scale-max="4"
