--- a/component/zoomImgByView/zoomImgByView.wxml
+++ b/component/zoomImgByView/zoomImgByView.wxml
@@ -14,6 +14,7 @@
       scale-min="1"
       scale-max="2"
       scale-value="{{scale}}"
+      damping="10"
       out-of-bounds
       x="{{x}}"
       y="{{y}}"
