--- a/component/zoomImgByView/zoomImgByView.wxml
+++ b/component/zoomImgByView/zoomImgByView.wxml
@@ -5,30 +5,54 @@
     style="height:{{view_height}}px; width:{{view_width}}px; top:{{correct_area_top}}px; left:{{correct_area_left}}px; background: red;"
     scale-area
   >
-    <!-- bindchange="onChange"
-      bindscale="onScale" -->
-    <movable-view
-      direction="all"
+    <!-- 
       scale
-      bindscale="onScale"
+      scale-value="{{scale}}"
+      bindchange="onChange"
+      bindscale="onScale" 
+      out-of-bounds -->
+    
+    <!-- 方法1 -->
+    <!-- <movable-view
+      scale
+      scale-value="{{scale}}"
+      bindscale="onScale" 
+      direction="all"
+      animation="false"
       scale-min="1"
       scale-max="2"
-      scale-value="{{scale}}"
-      damping="10"
-      out-of-bounds
+      damping="1000"
       x="{{x}}"
       y="{{y}}"
-    >
-
+    > 
+    
     <view wx:for='{{room_seats_map}}' wx:key='item.seat_id'>
     <image wx:if="{{item.state==1}}" class='seatReserve' data-id='{{item.seat_id}}' style='margin-top:{{item.loca_y * imgHeight}}px;margin-left:{{item.loca_x * imgWidth}}px'/>
     <image wx:elif="{{item.checked}}" class='seatChecked' data-id='{{item.seat_id}}' style='margin-top:{{item.loca_y * imgHeight}}px;margin-left:{{item.loca_x * imgWidth}}px'/>
     <image wx:elif="{{item.state==2}}" class='seatsTaken' hover-class='none' data-id='{{item.seat_id}}' style='margin-top:{{item.loca_y * imgHeight}}px;margin-left:{{item.loca_x * imgWidth}}px'/>
     <image wx:elif="{{item.state==3}}" class='seatOperating' hover-class='none' data-id='{{item.seat_id}}' style='margin-top:{{item.loca_y * imgHeight}}px;margin-left:{{item.loca_x * imgWidth}}px'/>
     <image wx:else class='seatsEmpty' bindtap='_checkThis' data-id='{{item.seat_id}}' style='margin-top:{{item.loca_y * imgHeight}}px;margin-left:{{item.loca_x * imgWidth}}px'/>
-  </view>
+    </view> -->
 
+    <!-- 方法2 -->
+    <movable-view
+      direction="all"
+      animation="false"
+      scale-min="1"
+      scale-max="2"
+      damping="1000"
+      x="{{x}}"
+      y="{{y}}"
+    >
+    <view wx:for='{{room_seats_map}}' wx:key='item.seat_id'>
+    <image wx:if="{{item.state==1}}" class='seatReserve' data-id='{{item.seat_id}}' style='margin-top:{{item.loca_y * imgHeight}}px;margin-left:{{item.loca_x * imgWidth}}px;width:{{btn_width}}rpx;height:{{btn_height}}rpx'/>
+    <image wx:elif="{{item.checked}}" class='seatChecked' data-id='{{item.seat_id}}' style='margin-top:{{item.loca_y * imgHeight}}px;margin-left:{{item.loca_x * imgWidth}}px;width:{{btn_width}}rpx;height:{{btn_height}}rpx'/>
+    <image wx:elif="{{item.state==2}}" class='seatsTaken' hover-class='none' data-id='{{item.seat_id}}' style='margin-top:{{item.loca_y * imgHeight}}px;margin-left:{{item.loca_x * imgWidth}}px;width:{{btn_width}}rpx;height:{{btn_height}}rpx'/>
+    <image wx:elif="{{item.state==3}}" class='seatOperating' hover-class='none' data-id='{{item.seat_id}}' style='margin-top:{{item.loca_y * imgHeight}}px;margin-left:{{item.loca_x * imgWidth}}px;width:{{btn_width}}rpx;height:{{btn_height}}rpx'/>
+    <image wx:else class='seatsEmpty' bindtap='_checkThis' data-id='{{item.seat_id}}' style='margin-top:{{item.loca_y * imgHeight}}px;margin-left:{{item.loca_x * imgWidth}}px;width:{{btn_width}}rpx;height:{{btn_height}}rpx'/>
+    </view>
 
+    
     
     <image 
       src="{{img_src}}"
@@ -38,6 +62,7 @@
     </movable-view>
   </movable-area>
 </view>
+<button class="switchScale-btn" bindtap='switchScale'>switchScale</button>
 
 
 
