--- a/packageA/pages/comment/comment.wxml
+++ b/packageA/pages/comment/comment.wxml
@@ -7,12 +7,18 @@
     <text class='byd'>Your total study time beyonds 88% users!!</text>
     <text class='byd'>Please give a feedback to this study experience.</text>
   </view>
-  <view class='boxx'>
-    <view class='box'></view>
+  <view class='box'>
+    <view class="textarea">
+      <textarea auto-focus="true" bindblur="bindTextAreaBlur" style='height: 5em'/>
+    </view>
   </view>
-  <button class='btn' hover-class='hover' bindtap='toHome'>
-    <view class="sub" bindtap='toHome'>Complete</view>
-  </button>
+
+  <form bindsubmit="complete" report-submit='true'>
+    <button class='btn' formType="submit" hover-class='hover'>
+      <view class="sub">Complete</view>
+    </button>
+  </form>
+
 
   <view class='ntc'>
     <view class='ntc2'>Have problems when using?Report to CheckChack team and we'll fix immediatly. The commit can be edited only one more time in 30 days.</view>
